--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,10 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p>{{ site.description }}</p>
+    <!-- <p>{{ site.description }}</p> -->
+    <p>
+      <img src="https://secure.gravatar.com/avatar/8169e598329354aaaa6bbbd27a361b6a?s=240" alt="me">
+    </p>
   </div>
 
   <nav class="sidebar-nav">
@@ -25,9 +28,9 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a> -->
+    <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a> -->
+    <!-- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
     <span class="sidebar-nav-item sidebar-social">
       <a href="https://twitter.com/thurboman" title="Twitter">
         <i class="fab fa-twitter fa-lg"></i>
